; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_vfpf.c_bnx2x_vfpf_finalize.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_vfpf.c_bnx2x_vfpf_finalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { i32 }
%struct.vfpf_first_tlv = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@BNX2X_MSG_IOV = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"done sending [%d] tlv over vf pf channel\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bnx2x_vfpf_finalize(%struct.bnx2x* %0, %struct.vfpf_first_tlv* %1) #0 {
  %3 = alloca %struct.bnx2x*, align 8
  %4 = alloca %struct.vfpf_first_tlv*, align 8
  store %struct.bnx2x* %0, %struct.bnx2x** %3, align 8
  store %struct.vfpf_first_tlv* %1, %struct.vfpf_first_tlv** %4, align 8
  %5 = load i32, i32* @BNX2X_MSG_IOV, align 4
  %6 = load %struct.vfpf_first_tlv*, %struct.vfpf_first_tlv** %4, align 8
  %7 = getelementptr inbounds %struct.vfpf_first_tlv, %struct.vfpf_first_tlv* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @DP(i32 %5, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %12 = getelementptr inbounds %struct.bnx2x, %struct.bnx2x* %11, i32 0, i32 0
  %13 = call i32 @mutex_unlock(i32* %12)
  ret void
}

declare dso_local i32 @DP(i32, i8*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
